Add CupomResgate entity, repository, and DTO; update TransacaoController and service logic