@@ -51,6 +51,7 @@ public class DataInitializer implements CommandLineRunner {
         addVantagens();
         addTransacoes();
     }
+
     private void createAdmin() {
         Usuario admin = new Usuario();
 
@@ -76,9 +77,9 @@ public class DataInitializer implements CommandLineRunner {
     private void addAlunos() {
         List<Instituicao> instituicoes = instituicaoRepository.findAll();
         Aluno aluno = new Aluno();
-        aluno.setNome("Sabrina Carpenter");
+        aluno.setNome("Ada Lovelace");
         aluno.setSenha("$2a$15$b3p7lCvC6sn/EgEakqKtoOUxONvePNn.nvxoqIP8zkAE9tPZQ8IOu");
-        aluno.setEmail("aluno.email@email.com");
+        aluno.setEmail("ada.lovelace@email.com");
         aluno.setCpf("123.456.789-00");
         aluno.setRg("12.345.678-9");
         aluno.setEndereco("Avenida Expresso, 150, Belo Horizonte - MG, 70707-070");
@@ -89,9 +90,9 @@ public class DataInitializer implements CommandLineRunner {
         alunoRepository.save(aluno);
 
         Aluno aluno2 = new Aluno();
-        aluno2.setNome("Dua Lipa");
+        aluno2.setNome("Alan Turing");
         aluno2.setSenha("$2a$15$b3p7lCvC6sn/EgEakqKtoOUxONvePNn.nvxoqIP8zkAE9tPZQ8IOu");
-        aluno2.setEmail("aluno1.email@email.com");
+        aluno2.setEmail("alan.turing@email.com");
         aluno2.setCpf("987.654.321-00");
         aluno2.setRg("98.765.432-1");
         aluno2.setEndereco("Avenida Central, 200, São Paulo - SP, 80808-080");
@@ -103,9 +104,9 @@ public class DataInitializer implements CommandLineRunner {
 
         // Adding two more students for the second institution
         Aluno aluno3 = new Aluno();
-        aluno3.setNome("Olivia Rodrigo");
+        aluno3.setNome("Grace Hopper");
         aluno3.setSenha("abcdef");
-        aluno3.setEmail("aluno2.email@email.com");
+        aluno3.setEmail("grace.hopper@email.com");
         aluno3.setCpf("321.654.987-00");
         aluno3.setRg("32.165.498-7");
         aluno3.setEndereco("Rua Verde, 300, Rio de Janeiro - RJ, 90909-090");
@@ -116,9 +117,9 @@ public class DataInitializer implements CommandLineRunner {
         alunoRepository.save(aluno3);
 
         Aluno aluno4 = new Aluno();
-        aluno4.setNome("Billie Eilish");
+        aluno4.setNome("Margaret Hamilton");
         aluno4.setSenha("7891011");
-        aluno4.setEmail("aluno3.email@email.com");
+        aluno4.setEmail("margaret.hamilton@email.com");
         aluno4.setCpf("654.321.987-00");
         aluno4.setRg("65.432.198-7");
         aluno4.setEndereco("Rua Azul, 400, Curitiba - PR, 60606-060");
@@ -131,44 +132,44 @@ public class DataInitializer implements CommandLineRunner {
 
     private void addEmpresas() {
         Empresa empresa = new Empresa();
-        empresa.setNome("Gostosuras PUB");
+        empresa.setNome("Tech Solutions");
         empresa.setCnpj("12.345.678/0001-90");
         empresaRepository.save(empresa);
     }
 
     private void addFuncionarios() {
         FuncionarioEmpresa funcionario1 = new FuncionarioEmpresa();
-        funcionario1.setNome("João da Silva");
+        funcionario1.setNome("Linus Torvalds");
         funcionario1.setSenha("senha123");
-        funcionario1.setEmail("joao.silva@empresa.com");
+        funcionario1.setEmail("linus.torvalds@techsolutions.com");
         funcionario1.setEmpresa(empresaRepository.findAll().get(0)); // First company
         funcionarioEmpresaRepository.save(funcionario1);
 
         FuncionarioEmpresa funcionario2 = new FuncionarioEmpresa();
-        funcionario2.setNome("Maria Oliveira");
+        funcionario2.setNome("Guido van Rossum");
         funcionario2.setSenha("senha456");
-        funcionario2.setEmail("maria.oliveira@empresa.com");
+        funcionario2.setEmail("guido.vanrossum@techsolutions.com");
         funcionario2.setEmpresa(empresaRepository.findAll().get(0)); // First company
         funcionarioEmpresaRepository.save(funcionario2);
 
         // Adding two more employees for the second company
         FuncionarioEmpresa funcionario3 = new FuncionarioEmpresa();
-        funcionario3.setNome("Carlos Pereira");
+        funcionario3.setNome("James Gosling");
         funcionario3.setSenha("senha789");
-        funcionario3.setEmail("carlos.pereira@empresa2.com");
+        funcionario3.setEmail("james.gosling@techsolutions.com");
         funcionario3.setEmpresa(empresaRepository.findAll().get(0)); // Second company
         funcionarioEmpresaRepository.save(funcionario3);
 
         FuncionarioEmpresa funcionario4 = new FuncionarioEmpresa();
-        funcionario4.setNome("Ana Souza");
+        funcionario4.setNome("Bjarne Stroustrup");
         funcionario4.setSenha("senha101");
-        funcionario4.setEmail("ana.souza@empresa2.com");
+        funcionario4.setEmail("bjarne.stroustrup@techsolutions.com");
         funcionario4.setEmpresa(empresaRepository.findAll().get(0)); // Second company
         funcionarioEmpresaRepository.save(funcionario4);
     }
 
     private void addVantagens() {
-        Empresa empresa = empresaRepository.findAll().getFirst();
+        Empresa empresa = empresaRepository.findAll().get(0);
         List<Vantagem> vantagens = new ArrayList<>();
         Vantagem vantagem1 = new Vantagem();
         vantagem1.setDescricao("Desconto de 10% em qualquer produto");
@@ -179,7 +180,8 @@ public class DataInitializer implements CommandLineRunner {
 
         Vantagem vantagem2 = new Vantagem();
         vantagem2.setDescricao("Desconto de 20% em qualquer produto");
-        vantagem2.setFoto("https://cdn.shopify.com/s/files/1/0817/7988/4088/articles/4XOfcVjU6L9Z0yxkgW0WeI_c472c5fd-a7d2-4075-ba11-944a3f40ceb4.jpg?v=1719388916&originalWidth=1848&originalHeight=782");
+        vantagem2.setFoto(
+                "https://cdn.shopify.com/s/files/1/0817/7988/4088/articles/4XOfcVjU6L9Z0yxkgW0WeI_c472c5fd-a7d2-4075-ba11-944a3f40ceb4.jpg?v=1719388916&originalWidth=1848&originalHeight=782");
         vantagem2.setCustoMoedas(20.0);
         vantagem2.setQuantidadeDisponivel(50.0);
         vantagem2.setEmpresa(empresa);
@@ -195,9 +197,9 @@ public class DataInitializer implements CommandLineRunner {
         List<Instituicao> instituicoes = instituicaoRepository.findAll();
 
         Professor prof1 = new Professor();
-        prof1.setNome("Taylor Swift");
+        prof1.setNome("Donald Knuth");
         prof1.setSenha("$2a$15$b3p7lCvC6sn/EgEakqKtoOUxONvePNn.nvxoqIP8zkAE9tPZQ8IOu");
-        prof1.setEmail("taylor.swift@puc.edu.br");
+        prof1.setEmail("donald.knuth@puc.edu.br");
         prof1.setCpf("111.222.333-44");
         prof1.setDepartamento("Computação");
         prof1.setSaldoMoedas(1000.0);
@@ -206,9 +208,9 @@ public class DataInitializer implements CommandLineRunner {
         professorRepository.save(prof1);
 
         Professor prof2 = new Professor();
-        prof2.setNome("Ariana Grande");
+        prof2.setNome("Barbara Liskov");
         prof2.setSenha("$2a$15$b3p7lCvC6sn/EgEakqKtoOUxONvePNn.nvxoqIP8zkAE9tPZQ8IOu");
-        prof2.setEmail("ariana.grande@puc.edu.br");
+        prof2.setEmail("barbara.liskov@puc.edu.br");
         prof2.setCpf("555.666.777-88");
         prof2.setDepartamento("Computação");
         prof2.setSaldoMoedas(1000.0);
@@ -227,20 +229,20 @@ public class DataInitializer implements CommandLineRunner {
             // 5 transações para diferentes alunos
             for (int i = 0; i < 5; i++) {
                 Aluno aluno = alunos.get(i % alunos.size());
-                
+
                 Transacao transacao = new Transacao();
                 transacao.setOrigem(professor);
                 transacao.setDestino(aluno);
                 transacao.setValor(50.0 + (i * 10)); // Valores diferentes para cada transação
                 transacao.setMensagem("Ótimo trabalho na atividade " + (i + 1));
                 transacao.setData(now.minusDays(i)); // Transações em dias diferentes
-                
+
                 transacaoRepository.save(transacao);
 
                 // Atualiza saldos
                 professor.setSaldoMoedas(professor.getSaldoMoedas() - transacao.getValor());
                 aluno.setSaldoMoedas(aluno.getSaldoMoedas() + transacao.getValor());
-                
+
                 professorRepository.save(professor);
                 alunoRepository.save(aluno);
             }
